syntax = "proto3";

option csharp_namespace = "MonitorAgent";

package monitor;

service ThreadDumpService {
  // Collect thread dump of the requested dotnet process
  rpc CollectThreadDump (ThreadDumpRequest) returns (ThreadDumpResponse);
}

message ThreadDumpRequest {
  int32 process_id = 1;
}

message ThreadDumpResponse {
  ThreadDump dump = 1;
}

message ThreadDump {
  repeated Thread treads = 1;
}

message Thread {
  string thread_id = 1;
  repeated string frames = 2;
}
